--- a/devinmajordotcom/Views/Shared/_Layout.cshtml
+++ b/devinmajordotcom/Views/Shared/_Layout.cshtml
@@ -46,12 +46,12 @@
 
     </div>
 
-    <div id="bootsnackAlertContainer" class="bootsnack"></div>
+    <div id="ajaxAlertContainer"></div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/bootstrap")=
+    @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/customScripts")
     @Scripts.Render("~/bundles/tinymce")
     <script src="@Url.Content("~/signalr/hubs")"></script>
