--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -11,5 +11,6 @@
     <div id="cpuCounter"></div>
     <div id="ramCounter"></div>
     <div id="tempCounter"></div>
+    <div id="driveCounters"></div>
 
 </div>
