got something here

--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -8,9 +8,13 @@
     <p style="color: #71cef5;">Watch the live feed of statistics below, and marvel at the beauty of my server.</p>
     <hr>
 
-    <div id="cpuCounter"></div>
-    <div id="ramCounter"></div>
-    <div id="tempCounter"></div>
-    <div id="driveCounters"></div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div id="cpuCounter" class="performancePieChart" data-percent=""><span class="percent"></span></div>
+            @*<div id="ramCounter">0%</div>
+            <div id="tempCounter" class="performancePieChart" data-percent="0">0%</div>*@
+            <div id="driveCounters">0%</div>
+        </div>
+    </div>
 
 </div>
