--- a/devinmajordotcom/Views/Home/_ServerStatus.cshtml
+++ b/devinmajordotcom/Views/Home/_ServerStatus.cshtml
@@ -11,8 +11,8 @@
     <div class="row">
         <div class="col-sm-12">
             <div id="cpuCounter" class="performancePieChart" data-percent=""><span class="percent"></span></div>
-            @*<div id="ramCounter">0%</div>
-            <div id="tempCounter" class="performancePieChart" data-percent="0">0%</div>*@
+            <div id="ramCounter" class="performancePieChart" data-percent=""><span class="percent"></span></div>
+            @*<div id="tempCounter" class="performancePieChart" data-percent="0">0%</div>*@
             <div id="driveCounters">0%</div>
         </div>
     </div>
