--- a/devinmajordotcom/Constants/ApplicationMaster.tt
+++ b/devinmajordotcom/Constants/ApplicationMaster.tt
@@ -33,12 +33,12 @@ using System.Linq;
 using System.Web;
 using System.ComponentModel.DataAnnotations;
 
-namespace Devinmajordotcom
+namespace devinmajordotcom
 {
     /// <summary>
     /// We need the ability to check for new Applications
     /// </summary>
-	public static class ApplicationMaster
+	public static class ApplicationMasterEnum
 	{
 <#
 using(SqlConnection conn = new SqlConnection())
