--- a/devinmajordotcom/Constants/HardwareType.tt
+++ b/devinmajordotcom/Constants/HardwareType.tt
@@ -1,4 +1,4 @@
-﻿<#@ template hostspecific="true" language="C#" debug="false"  #>
+﻿  <#@ template hostspecific="true" language="C#" debug="false"  #>
 <#@ assembly name="System.Core" #>
 <#@ assembly name="System.Data" #>
 <#@ assembly name="System.Configuration" #>
@@ -11,7 +11,7 @@
 
 <#
 	string ConnectionStringName = "MainDbConnection";
-	string Query = "SELECT ID, TypeName FROM [Portfolio].[SkillTypeMaster] ORDER BY ID;";
+	string Query = "SELECT ID, Name FROM [dbo].[HardwareType] ORDER BY ID;";
 
     var map = new ExeConfigurationFileMap();
     map.ExeConfigFilename = this.Host.ResolvePath(@"..\Web.config");
@@ -36,9 +36,9 @@ using System.ComponentModel.DataAnnotations;
 namespace devinmajordotcom
 {
     /// <summary>
-    /// We need the ability to check for new SkillTypes
+    /// We need the ability to check for new HardwareTypes
     /// </summary>
-	public static class SkillTypeMasterEnum
+	public static class HardwareTypeEnum
 	{
 <#
 using(SqlConnection conn = new SqlConnection())
@@ -53,7 +53,7 @@ using(SqlConnection conn = new SqlConnection())
 	{
 #>
 
-		public enum SkillTypeMasters
+		public enum HardwareTypes
 		{
 <#
 
