--- a/devinmajordotcom/Content/cover.css
+++ b/devinmajordotcom/Content/cover.css
@@ -73,7 +73,7 @@ input[type=checkbox].css-checkbox + label.css-label {
 input[type=checkbox].css-checkbox.checked + label.css-label {
     background-position: 0 -30px;
 }
-label.css-label {
+.css-checkbox {
     background-image:url(Images/check2.png);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
