--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -7,7 +7,7 @@
 {
     var count = 0;
     <div id="tagsForm" class="">
-        <ul class="mediaSortable">
+        <ul id="mediaDashboardLinksList" class="mediaSortable">
         @foreach (var link in Model.SidebarLinks)
         {
             @Html.HiddenFor(x => x.SidebarLinks[count].ID)
@@ -95,8 +95,16 @@
 
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
-            <input class="form-control" id="updateMediaDashboard" type="submit" value="Update Media Dashboard">
+            <button class="form-control btn btn-primary" id="addNewMediaDashboardLink" type="button">Add New Link</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-offset-2 col-sm-8">
+            <input class="form-control btn btn-success" id="updateMediaDashboard" type="submit" value="Update Media Dashboard">
         </div>
     </div>
 
 }
+
+@Html.Partial("../MediaDashboard/_NewLink")
