this stuff should be good, all the form stuff

--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -42,7 +42,7 @@
                                         data-icon="@Model.SidebarLinks[count].DisplayIcon"
                                         type="button"></button>
                             </span>
-                            @Html.TextBoxFor(x => x.SidebarLinks[count].DisplayName, new { @class = "form-control", style = "margin-bottom: 0px", placeholder = "Display Name" })
+                            @Html.TextBoxFor(x => x.SidebarLinks[count].DisplayName, new { @class = "form-control namer", style = "margin-bottom: 0px", placeholder = "Display Name" })
                         </div>
                     </div>
                     <div class="col-sm-6 text-center">
