--- a/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_NewLink.cshtml
@@ -25,7 +25,7 @@
                     <span class="input-group-btn">
                         <button data-placement="left" class="btn btn-default iconpicker" name="SidebarLinks[{{newLinkCounter}}].DisplayIcon" role="iconpicker" data-iconset="fontawesome" data-icon="" type="button"><i class="fa "></i><input type="hidden" name="SidebarLinks[{{newLinkCounter}}].DisplayIcon" value=""><span class="caret"></span></button>
                     </span>
-                    <input class="form-control" id="SidebarLinks_{{newLinkCounter}}__DisplayName" name="SidebarLinks[{{newLinkCounter}}].DisplayName" placeholder="Display Name" style="margin-bottom: 0px" type="text" value="">
+                    <input class="form-control namer" id="SidebarLinks_{{newLinkCounter}}__DisplayName" name="SidebarLinks[{{newLinkCounter}}].DisplayName" placeholder="Display Name" style="margin-bottom: 0px" type="text" value="">
                 </div>
             </div>
             <div class="col-sm-6 text-center">
