--- a/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
+++ b/devinmajordotcom/Views/MediaDashboard/_ManageMediaDashboard.cshtml
@@ -95,7 +95,7 @@
 
     <div class="row">
         <div class="col-sm-offset-2 col-sm-8">
-            <button class="form-control btn btn-primary" id="addNewMediaDashboardLink" type="button">Add New Link</button>
+            <button class="form-control btn btn-success" id="addNewMediaDashboardLink" type="button" style="border-color: #00bc8c !important; background-color: #00bc8c !important;"><span class="glyphicon glyphicon-plus"></span>&nbsp;Add New Link</button>
         </div>
     </div>
 
